# grz-tools

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  environment-dev.yaml  environment.yaml  index.html  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: check-pr.yml  ci.yml  crates-io.yml  dependency-review.yml  docker.yml  publish.yml  pypi.yml  python-package.yml  release-please.yml
grz-cli/: versions.json
grz-cli/1.3/: index.html  objects.inv
grz-cli/1.3/cli/: index.html
grz-cli/1.3/contributing/: index.html
grz-cli/1.3/gdc/: index.html
grz-cli/development/: 404.html  sitemap.xml
grz-cli/development/clinic/: index.html
grz-cli/development/search/: search_index.json
grz_upload/: cli.py  config.yaml  encrypt_upload.py  file_operations.py  upload.py
resources/: config.yaml  grz-schema.json
src/grz_cli/: cli.py  constants.py  download.py  fastq_validation.py  file_operations.py  logging_setup.py  parser.py  progress_logging.py  transfer.py  upload.py
src/grz_cli/commands/: archive.py  clean.py  common.py  consent.py  decrypt.py  download.py  encrypt.py  list_submissions.py  pruefbericht.py  submit.py  upload.py  validate.py
src/grz_cli/models/: config.py  metadata.py
src/grz_cli/models/v1_0_0/: metadata.py
src/grz_cli/models/v1_1_1/: metadata.py
src/grz_cli/progress/: progress_logging.py
src/grz_cli/resources/: grz-schema.json  thresholds.json
src/grz_cli/utils/: __init__.py  config.py  crypt.py  io.py  paths.py
src/grz_cli/validation/: __init__.py  fastq.py
src/grz_cli/workers/: __init__.py  download.py  submission.py  upload.py  worker.py
src/grz_upload/: cli.py  constants.py  fastq_validation.py  file_manager.py  file_operations.py  file_validator.py  logging_setup.py  parser.py  prepare_file_submission.py  progress_logging.py  upload.py  upload_file_submission.py  uploader.py
tests/: conftest.py  test_bam_validation.py  test_cli.py  test_download.py  test_encrypt_upload.py  test_fastq_validation.py  test_file_operations.py  test_file_progress_logging.py  test_parser.py  test_read_multiple_json.py  test_upload.py
tests/cli/: common.py  test_archive.py  test_clean.py  test_consent.py  test_crypt.py  test_db.py  test_get_id.py  test_list.py  test_pruefbericht.py  test_report.py  test_upload.py  test_validate.py
tests/mock_files/: example_metadata.json  grz_mock_private_key.sec  mock_public_key.pub  mock_small_input_file.txt  submitter_mock_private_key.sec  submitter_mock_public_key.pub
tests/mock_files/metadata_validation/: duplicate-run-id.json  incompatible-reference-genomes.json  missing-fastq-r2.json  missing-read-order.json  missing-target-regions.json  missing-vcf-file.json
tests/mock_files/submissions/valid_submission/encrypted_files/: aaaaaaaa00000000aaaaaaaa00000000_blood_normal.read1.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000_blood_normal.read2.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000_blood_normal.vcf.c4gh  aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.vcf.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_normal.read1.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_normal.read2.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_normal.vcf.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.read1.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.read2.fastq.gz.c4gh  aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.vcf.c4gh  bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111_blood_normal.read1.fastq.gz.c4gh  bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111_blood_normal.read2.fastq.gz.c4gh  bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111bbbbbbbb11111111_blood_normal.vcf.c4gh  target_regions.bed.c4gh
tests/mock_files/submissions/valid_submission/files/: aaaaaaaa00000000aaaaaaaa00000000_blood_tumor.vcf  target_regions.bed
tests/mock_files/submissions/valid_submission/metadata/: metadata.json
tests/resources/reads/: README.md  hard_clipped_primary.bam  hard_clipped_primary.sam  secondary.bam  secondary.sam  valid_HiFi.bam
