[project]
name = "grz-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["grz-common", "grz-cli", "grzctl", "grz-db", "grz-pydantic-models"]

[tool.uv.sources]
grz-common = { workspace = true }
grz-cli = { workspace = true }
grzctl = { workspace = true }
grz-db = { workspace = true }
grz-pydantic-models = { workspace = true }

[tool.uv.workspace]
members = ["packages/grz-common", "packages/grz-cli", "packages/grz-db", "packages/grzctl", "packages/grz-pydantic-models"]

[project.optional-dependencies]
test = [
    "pytest >=8.3.3,<9",
    "pytest-cov >=5.0.0,<6",
    "pytest-mock >=3.14.0,<4",
    "moto[s3] >=5.0.16,<6",
    "pytest-sugar >=1.0.0,<2",
    "ruff >=0.11.12,<1",
    "numpy >=2.1.2,<3",
    "responses ==0.25.*",
    "grz-common",
    "grz-cli",
    "grz-db",
    "grzctl",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-sugar",
    "moto[s3]",
    "numpy",
    "grz-common",
    "grz-cli",
    "grz-db",
    "grzctl",
]
lint = [
    "ruff",
    "types-pyyaml",
    "types-tqdm",
    "pydantic",
    "pyrefly",
]

[tool.ruff]
exclude = [
    ".git",
    ".devcontainer",
    "__pycache__",
    "build",
    "dist",
    "out"
]
extend-exclude = ["alembic"]

line-length = 120
src = [
    "src",
    "tests"
]
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "UP",
    "I",
    "D",
]
ignore = [
    "E111",
    "E114",
    "E116",
    "PLW",
    "RUF001",
    "RUF010",
    "RUF012",
    "N818",
    "B008",
    "PLR2004",
    "D200",
    "D205",
    "D400",
    "D401",
    "D107",
    "D206",
    "D300",
    "UP040",
    "D100",
    "D101",
    "D102",
    "D103",
    "B028"
]
select = [
    "C90",
    "F",
    "I",
    "S",
    "B",
    "N",
    "UP",
    "PL",
    "RUF",
    "SIM",
    "D",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"packages/*/tests/*" = [
    "S",
    "SIM",
    "PLR",
    "B011",
]
"tests/*" = [
    "S",
    "SIM",
    "PLR",
    "B011",
]
"__init__.py" = [
    "D",
]
"packages/grz-cli/src/grz_cli/models/**.py" = [
    "N805"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["format-check", "lints", "pyrefly", "3.12", "3.13"]
allowlist_externals = ["pytest", "ruff"]
isolated_build = true

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run unit tests"
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

[tool.tox.env."format-check"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "format", "--check"]]

[tool.tox.env."lints"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "check"]]

[tool.tox.env."pyrefly"]
runner = "uv-venv-lock-runner"
skip_install = false
dependency_groups = ["lint"]
commands = [["pyrefly", "check"]]

[tool.pyrefly]
project_includes = ["packages/**/*.py"]
python_version = "3.12.0"
use_untyped_imports = false
ignore_missing_source = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
