[project]
name = "grz-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["grz-common", "grz-cli", "grzctl", "grz-db", "grz-pydantic-models"]

[tool.uv.sources]
grz-common = { path = "packages/grz-common", editable = true }
grz-cli = { path = "packages/grz-cli", editable = true }
grzctl = { path = "packages/grzctl", editable = true }
grz-db = { path = "packages/grz-db", editable = true }
grz-pydantic-models = { path = "packages/grz-pydantic-models", editable = true }

[project.optional-dependencies]
test = [
    "pytest >=8.3.3,<9",
    "pytest-cov >=5.0.0,<6",
    "pytest-mock >=3.14.0,<4",
    "moto[s3] >=5.0.16,<6",
    "pytest-sugar >=1.0.0,<2",
    "ruff >=0.11.12,<1",
    "numpy >=2.1.2,<3",
    "responses ==0.25.*",
    "grz-common",
    "grz-cli",
    "grz-db",
    "grzctl",
]

[dependency-groups]
dev = ["tox", "tox-uv"]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-sugar",
    "moto[s3]",
    "numpy",
    "grz-common",
    "grz-cli",
    "grz-db",
    "grzctl",
]
lint = [
    "ruff",
    "types-pyyaml",
    "types-tqdm",
    "types-boto3[s3] >=1.36,<2",
    "pydantic",
    "mypy",
]

[tool.ruff]
exclude = [
    ".git",
    ".devcontainer",
    "__pycache__",
    "build",
    "dist",
    "out"
]
extend-exclude = ["alembic"]

line-length = 120
src = [
    "src",
    "tests"
]
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "UP",
    "I",
    "D",
]
ignore = [
    "E111",
    "E114",
    "E116",
    "PLW",
    "RUF001",
    "RUF010",
    "RUF012",
    "N818",
    "B008",
    "PLR2004",
    "D200",
    "D205",
    "D400",
    "D401",
    "D107",
    "D206",
    "D300",
    "UP040",
    "D100",
    "D101",
    "D102",
    "D103",
    "B028"
]
select = [
    "C90",
    "F",
    "I",
    "S",
    "B",
    "N",
    "UP",
    "PL",
    "RUF",
    "SIM",
    "D",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"packages/*/tests/*" = [
    "S",
    "SIM",
    "PLR",
    "B011",
]
"tests/*" = [
    "S",
    "SIM",
    "PLR",
    "B011",
]
"__init__.py" = [
    "D",
]
"packages/grz-cli/src/grz_cli/models/**.py" = [
    "N805"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["format-check", "lints", "typecheck", "3.12", "3.13"]
allowlist_externals = ["pytest", "ruff"]
isolated_build = true

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run unit tests"
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

[tool.tox.env."format-check"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "format", "--check"]]

[tool.tox.env."lints"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "check"]]

[tool.tox.env."typecheck"]
runner = "uv-venv-lock-runner"
skip_install = false
dependency_groups = ["lint"]
commands = [["mypy"]]

[tool.mypy]
python_version = "3.12"
plugins = "pydantic.mypy"
packages = "grz_cli,grzctl,grz_pydantic_models,grz_db,grz_common"

[[tool.mypy.overrides]]
module = "crypt4gh.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
